Skip to content

Fullscreen

Windows Version: 10 build 16299.309, 8.1 update 4, and 7 SP1 VLC Version: 3.0.2 Hardware Configuration: Irrelevant, bug reproducible regardless of platform VLC Configuration: Plalist docked (the default setting)

Steps to reproduce bug:

  1. Open VLC and play a video.
  2. Switch to playlist (Ctrl+L or View > Playlist)
  3. Switch to fullscreen (F or Video > Fullscreen, NOT View > Fullscreen Interface)

Expected result: Playlist closes and the video opens to fullscreen.

Actual result: Playlist still open, Fullscreen Interface-like but with floating (and disappearing) controls.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information