qt: disable playlist on fullscreen

The playlist was disabled on fullscreen only when numscreen was in
range. Since commit 22c9f2a46dbe3e427bf96560786c2473554450b4, numscreen
might be left to -1 not to enforce a screen to the FSC.

In that case, the playlist must also be disabled.

Fixes #20362

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
(cherry picked from commit e590a8c53e9d0f125b0b5b9ed435f224c2d5f725)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>